--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
-  "name": "apollo-trainning",
+  "name": "apollo-training",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon  --exec babel-node  ./src/index.js"
+    "start": "nodemon  --exec babel-node  src/server.js",
+    "lint:fix": "npm run lint --fix"
   },
   "author": "pankaj sharma",
   "license": "ISC",
   "dependencies": {
+    "apollo-datasource-rest": "^0.6.1",
     "apollo-server-express": "^2.8.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
-    "graphql": "^14.4.2"
+    "graphql": "^14.4.2",
+    "merge-graphql-schemas": "^1.7.0",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "babel-preset-latest-node": "^3.2.1",
     "nodemon": "^1.19.1"
   }
 }
