--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "graphql": "^14.4.2",
+    "http": "0.0.0",
     "merge-graphql-schemas": "^1.7.0",
     "path": "^0.12.7"
   },
